--- a/package.json
+++ b/package.json
@@ -21,9 +21,8 @@
     "body-parser": "^1.17.2",
     "dotenv": "^4.0.0",
     "express": "^4.15.3",
-    "morgan": "^1.8.2",
-    "pg": "^6.2.3",
-    "sequelize": "^4.0.0"
+    "mongoose": "^4.10.5",
+    "morgan": "^1.8.2"
   },
   "devDependencies": {
     "nodemon": "^1.11.0"
