--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   },
   "homepage": "https://github.com/reginavlee/full_stack_review#readme",
   "dependencies": {
+    "angular": "^1.6.4",
     "axios": "^0.16.2",
     "babel-core": "^6.25.0",
     "babel-loader": "^7.0.0",
@@ -27,6 +28,7 @@
     "body-parser": "^1.17.2",
     "dotenv": "^4.0.0",
     "express": "^4.15.3",
+    "lodash": "^4.17.4",
     "mongoose": "^4.10.5",
     "morgan": "^1.8.2",
     "react": "^15.5.4",
