--- a/package.json
+++ b/package.json
@@ -29,10 +29,10 @@
     "dotenv": "^4.0.0",
     "express": "^4.15.3",
     "lodash": "^4.17.4",
-    "mongoose": "^4.10.5",
     "morgan": "^1.8.2",
     "react": "^15.5.4",
     "react-dom": "^15.5.4",
+    "sequelize": "^4.0.0",
     "webpack": "^2.6.1"
   },
   "devDependencies": {
