--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "lodash": "^4.17.4",
     "morgan": "^1.8.2",
     "react": "^15.5.4",
+    "react-bootstrap": "^0.31.1",
     "react-dom": "^15.5.4",
     "sequelize": "^4.0.0",
     "webpack": "^2.6.1"
